ref to 20191231